--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
   </body>
   <script>
-    let url = "http://35.75.66.92/data share";
+    let url = "https://yuzen.serveirc.com/data share";
     async function getData() {
       let donwloadContainer = document.getElementById("datas");
       let res = await fetch(`${url}/getFiles.php`, {
