--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       return `${sizes}${name}`;
     }
     console.log(changeSize(3000000));
-    //let url = "https://yuzen.serveirc.com/data share";
-    let url = "http://127.0.0.1/data share";
+    let url = "https://yuzen.serveirc.com/data share";
+    //let url = "http://127.0.0.1/data share";
     async function getData() {
       try {
         let donwloadContainer = document.getElementById("datas");
