--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </tbody>
       </table>
     </div>
+    <a href="./upload.html">新增</a>
   </body>
   <script>
     function changeSize(size) {
@@ -41,9 +42,9 @@
       }
       return `${sizes}${name}`;
     }
-    console.log(changeSize(3000000));
+
     let url = "https://yuzen.serveirc.com/data share";
-    //let url = "http://127.0.0.1/data share";
+    // let url = "http://127.0.0.1/data share";
     async function getData() {
       try {
         let donwloadContainer = document.getElementById("datas");
@@ -66,6 +67,9 @@
               .pop()
               .toUpperCase()}</td>
             <td class="size">${changeSize(file[i].file_size)}</td>
+            <td><a href='${url}/preview.php?file_id=${
+              file[i].id
+            }' target="_BLANK=">檢視</a></td>
             <td><a href='${url}/donwload.php?file_id=${
               file[i].id
             }' donwload='${url}/donwload.php?file_id=${
