--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
     <a href="./upload.html">新增</a>
   </body>
+  <script src="./script.js"></script>
   <script>
     function changeSize(size) {
       let sizes = parseFloat(size / 1024).toFixed(2);
@@ -43,8 +44,6 @@
       return `${sizes}${name}`;
     }
 
-    let url = "https://yuzen.serveirc.com/data share";
-    // let url = "http://127.0.0.1/data share";
     async function getData() {
       try {
         let donwloadContainer = document.getElementById("datas");
@@ -67,9 +66,7 @@
               .pop()
               .toUpperCase()}</td>
             <td class="size">${changeSize(file[i].file_size)}</td>
-            <td><a href='${url}/preview.php?file_id=${
-              file[i].id
-            }' target="_BLANK=">檢視</a></td>
+            <td><a href='${url}/preview.php?file_id=${file[i].id}'>檢視</a></td>
             <td><a href='${url}/donwload.php?file_id=${
               file[i].id
             }' donwload='${url}/donwload.php?file_id=${
