--- a/upload.html
+++ b/upload.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- <script type="module" src="script.js"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
@@ -10,7 +11,7 @@
         top: 50%;
         right: 50%;
         transform: translate(50%, -50%);
-        display: none;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -32,14 +33,23 @@
       <input type="text" id="user" />
       <label for="pass">password</label>
       <input type="password" id="pass" />
+      <button
+        onclick="(
+function (){
+  let popbox=document.querySelector('.pop');
+  popbox.style.display='none'
+  
+}
+      )()"
+      >
+        確認
+      </button>
     </div>
 
     <div id="res"></div>
     <ol id="data"></ol>
+    <script src="./script.js"></script>
     <script>
-      let url = "https://yuzen.serveirc.com/data share";
-      // let url = "http://127.0.0.1/data share";
-
       async function upload() {
         let data = document.getElementById("datas");
         console.log(data.files.length);
@@ -57,10 +67,10 @@
           getData();
         }
       }
-
+      !function (window) {};
       async function getData() {
+        let donwloadContainer = document.getElementById("data");
         try {
-          let donwloadContainer = document.getElementById("data");
           donwloadContainer.innerHTML = `<h1>loading...</h1>`;
           let res = await fetch(`${url}/getFiles.php`, {
             method: "get",
@@ -73,27 +83,28 @@
               let file = datas.data;
               donwloadContainer.innerHTML += `<div class="file" id="${i}">
 
-                  <li>
-                <p>${file[i].file_name}</p>
+                        <li>
+                      <p>${file[i].file_name}</p>
 
-                <p>size:${parseFloat(file[i].file_size / 1024).toFixed(2)}KB</p>
-              <button onclick="deleted(${i},${file[i].id})">delete</button>
-              </li>
-              </div>`;
+                      <p>size:${parseFloat(file[i].file_size / 1024).toFixed(
+                        2
+                      )}KB</p>
+                    <button onclick="deleted(${file[i].id})">delete</button>
+                    </li>
+                    </div>`;
             }
           } else {
-            throw new Error("error");
+            donwloadContainer.innerHTML = `<h1>暫無資料</h1>`;
           }
         } catch (error) {
-          donwloadContainer.innerHTML = `<h1>暫無資料</h1>`;
+          console.log(error);
         }
       }
       getData();
 
-      async function deleted(elId, id) {
+      async function deleted(id) {
         let user = document.getElementById("user").value;
         let pass = document.getElementById("pass").value;
-        let datas = document.querySelectorAll(".file");
 
         let res = await fetch(`${url}/remove.php`, {
           method: "post",
