--- a/upload.html
+++ b/upload.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
@@ -204,6 +204,7 @@ popbox.style.display='none'
               formData.append("file", element);
               let config = {
                 onUploadProgress: (ProgressEvent) => {
+                  console.log(ProgressEvent);
                   let persent =
                     ((ProgressEvent.loaded / ProgressEvent.total) * 100) | 0;
                   status[i].textContent = persent + "%";
